--- a/Documents/DynamicDataLinks.html
+++ b/Documents/DynamicDataLinks.html
@@ -1,11 +1,12 @@
 <html>
 <head><title>SWIFT data request 
 </title>
+<link rel="icon" type="image/png" href="SWIFTlogo_icon.png">
 </head>
 
 <body BGCOLOR=white>
 
-<img width=60 src="SWIFTlogo.png">
+<img width=60 src="SWIFTlogo_icon.png">
 <font size="6">
 SWIFT data 
 </font>
