spacing in web page

--- a/Documents/DynamicDataLinks.html
+++ b/Documents/DynamicDataLinks.html
@@ -33,13 +33,13 @@ Telemetry data
 </font>
 <br>
 Telemetry formats and automation are documented at <a href="https://github.com/SASlabgroup/SWIFT-codes/blob/master/Documents/SWIFT_telemetry_access.pdf">SWIFT_telemetry_access.pdf</a>
-<br>
-A live map with any buoys reporting within the last 3 hours is at <a href="http://swiftserver.apl.washington.edu/map/">swiftserver.apl.uw.edu/map</a>, and this <a href="http://swiftserver.apl.washington.edu/services/buoy?action=get_data&buoy_name=all&start=recent&format=kml">kml file</a> has the same information for viewing in  any GIS software.
-<br>
-A dashboard with simple telemetry data display is at <a href="https://swiftdashboard.apl.uw.edu">https://swiftdashboard.apl.uw.edu</a>.
-<br>
+<br><br>
+A live map with any buoys reporting within the last 3 hours is at <a href="http://swiftserver.apl.washington.edu/map/">swiftserver.apl.uw.edu/map</a>, and this <a href="http://swiftserver.apl.washington.edu/services/buoy?action=get_data&buoy_name=all&start=recent&format=kml">kml file</a> also has all buoys reporting in the last 3 hours.
+<br><br>
+A dashboard with microSWIFT data display is at <a href="https://swiftdashboard.apl.uw.edu">https://swiftdashboard.apl.uw.edu</a>.
+<br><br>
 Select SWIFTs and microSWIFTs can also be viewed in the <a href="https://software.apl.uw.edu/proto/BackyardBuoys/app.php">Backyard Buoys app</a>.
-<br>
+<br><br>
 Telemetry data can also be accessed directly in Matlab using <a href="https://github.com/SASlabgroup/SWIFT-codes/blob/master/GeneralTools/pullSWIFTtelemetry.m">pullSWIFTtelemetry.m</a> 
 or in Python <a href="https://github.com/SASlabgroup/microSWIFTtelemetry"> with this package</a> (presently microSWIFTs only). 
 <br><br>
