Make JSON default

--- a/Documents/DynamicDataLinks.html
+++ b/Documents/DynamicDataLinks.html
@@ -68,8 +68,8 @@ ID: <input type="text" name="buoy_name" id="buoy_name_kml" size="18"> (examples:
 </div>
 <div class="form-row">
 data type: <select name="format">
-<option value="kml" selected>kml</option>
-<option value="json">json</option>
+<option value="kml">kml</option>
+<option value="json" selected>json</option>
 </select> (kml is Google Earth, json is simple text)
 </div>
 <input type="submit" value="Submit">
